Sun Mar  1 18:45:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_footprint_chart.sh
        * bin/generate_performance_chart.sh
        * bin/generate_topinfo_charts.sh
        * bin/performance_stats.sh
          Rotate xlabel to make them more readable

Sun Mar  1 07:36:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_performance_chart.sh:
        * bin/performance_stats.sh:
        * html/Stats/configuration.shtml:
        * html/Stats/footprint.shtml:
          Extended these files to that we can use them on emulab

Fri Feb 27 12:31:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Generate a link to the raw data file

Fri Feb 27 10:09:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          If the object size is smaller then 1Kb, generate the graph in
          bytes

Fri Feb 27 10:09:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Changed gnuplot generation

Fri Feb 27 09:50:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/ace_qt3reactor.mpc:
        * ace/ace_qt4reactor.mpc:
          Preventing QtReactor_moc.cpp to be included twice

Fri Feb 27 08:21:47 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/FlReactor/FlReactor.cpp:
        * ace/FoxReactor/FoxReactor.cpp:
        * tests/FlReactor_Test.cpp:
          Fixed includes.

Fri Feb 27 07:52:36 UTC 2009  Olli Savia  <ops@iki.fi>

        * performance-tests/RPC/client.cpp:
          Added #include "ace/Throughput_Stats.h" to fix compile errors.

Fri Feb 27 07:08:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Corrected sorting order

Thu Feb 26 12:26:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Addr.cpp:
          Layout change

        * ace/Event_Handler.h:
        * ace/Free_List.h: